--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   riverpod: 2.0.0-dev.5
+  flutter_riverpod: 2.0.0-dev.5
 
 dev_dependencies:
   flutter_test:
